[gd_scene load_steps=4 format=3 uid="uid://byhxpob74w2d5"]

[ext_resource type="Script" path="res://Scenes/PasswordLine/password_line.gd" id="1_xrh77"]
[ext_resource type="StyleBox" uid="uid://dyhjt06puyome" path="res://Styles/ButtonPressedGreen/button_pressed_green.tres" id="2_aw8sd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bl42"]
content_margin_left = 3.0
content_margin_top = 1.0
content_margin_right = 3.0
content_margin_bottom = 1.0
bg_color = Color(0, 0.721569, 0.317647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PasswordLine" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 913.0
offset_bottom = 71.0
script = ExtResource("1_xrh77")

[node name="Background" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="PasswordHeader" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 3.0
offset_right = 116.766
offset_bottom = 34.0
text = "Example Password"
placeholder_text = "Enter password name here"
max_length = 50
expand_to_text_length = true

[node name="EditPassword" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 127.0
offset_top = 6.0
offset_right = 152.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 12
theme_override_styles/pressed = ExtResource("2_aw8sd")
toggle_mode = true
text = "‚úèÔ∏è"

[node name="DeletePassword" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 161.0
offset_top = 6.0
offset_right = 186.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 12
text = "üóëÔ∏è "
text_overrun_behavior = 1

[node name="PasswordDescription" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 197.0
offset_top = 3.0
offset_right = 804.0
offset_bottom = 34.0
grow_horizontal = 0
placeholder_text = "Enter password description here"
max_length = 100

[node name="LoginLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 41.0
offset_right = 57.0
offset_bottom = 67.0
text = "Login"

[node name="Login" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 38.0
offset_right = 128.063
offset_bottom = 69.0
placeholder_text = "Enter login here"
max_length = 25
editable = false
expand_to_text_length = true

[node name="LoginClipboard" type="Button" parent="."]
layout_mode = 1
offset_left = 134.0
offset_top = 42.0
offset_right = 159.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 12
text = "üìã "
text_overrun_behavior = 1

[node name="PasswordLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 177.0
offset_top = 41.0
offset_right = 256.0
offset_bottom = 67.0
text = "Password"

[node name="Password" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 38.0
offset_right = 344.766
offset_bottom = 69.0
placeholder_text = "Enter password here"
max_length = 25
editable = false
secret = true
expand_to_text_length = true

[node name="ShowSecret" type="Button" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 42.0
offset_right = 376.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 12
theme_override_styles/pressed = SubResource("StyleBoxFlat_0bl42")
toggle_mode = true
text = "Ô∏èüîí"
text_overrun_behavior = 1

[node name="PasswordClipboard" type="Button" parent="."]
layout_mode = 1
offset_left = 382.0
offset_top = 42.0
offset_right = 407.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 12
disabled = true
text = "üìã "
text_overrun_behavior = 1

[node name="NativeNotification" type="NativeNotification" parent="."]

[node name="NativeConfirmationDialog" type="NativeConfirmationDialog" parent="."]
title = "Please confirm deletion"

[connection signal="resized" from="PasswordHeader" to="." method="_on_password_header_resized"]
[connection signal="text_changed" from="PasswordHeader" to="." method="_on_password_header_text_changed"]
[connection signal="focus_exited" from="EditPassword" to="." method="_on_edit_password_focus_exited"]
[connection signal="pressed" from="EditPassword" to="." method="_on_edit_password_pressed"]
[connection signal="pressed" from="DeletePassword" to="." method="_on_delete_password_pressed"]
[connection signal="resized" from="PasswordDescription" to="." method="_on_password_header_resized"]
[connection signal="text_changed" from="PasswordDescription" to="." method="_on_password_description_text_changed"]
[connection signal="focus_exited" from="Login" to="." method="_on_login_focus_exited"]
[connection signal="resized" from="Login" to="." method="_on_login_resized"]
[connection signal="text_changed" from="Login" to="." method="_on_login_text_changed"]
[connection signal="pressed" from="LoginClipboard" to="." method="_on_login_clipboard_pressed"]
[connection signal="focus_exited" from="Password" to="." method="_on_password_focus_exited"]
[connection signal="resized" from="Password" to="." method="_on_password_resized"]
[connection signal="text_changed" from="Password" to="." method="_on_password_text_changed"]
[connection signal="pressed" from="ShowSecret" to="." method="_on_show_secret_pressed"]
[connection signal="pressed" from="PasswordClipboard" to="." method="_on_password_clipboard_pressed"]
[connection signal="confirmed" from="NativeConfirmationDialog" to="." method="_on_native_confirmation_dialog_confirmed"]
